<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="saurabh.tutorial.MainActivity">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/country"
        android:hint="Select country"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_gravity="center"
    />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fruit_apple"
        android:text="@string/apple"
        android:onClick="selectItem"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fruit_grapes"
        android:text="@string/grape"
        android:onClick="selectItem"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fruit_orange"
        android:text="@string/orange"
        android:onClick="selectItem"
        />
    <Button style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center"
        android:onClick="finalSelection"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_result"
        android:text="Hello world"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apple"
            android:id="@+id/radio_apple"
            android:onClick="selectRadio"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grape"
            android:id="@+id/radio_grapes"
            android:onClick="selectRadio"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            android:id="@+id/radio_orange"
            android:onClick="selectRadio"
            />
    </RadioGroup>

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intent1"
        android:text="@string/newIntent"
        android:layout_gravity="center"
        android:onClick="newIntent"
        />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggle"
        android:textOff="Vibrate Off"
        android:textOn="Vibrate On"
        android:layout_gravity="center_horizontal"
        android:onClick="changeMode"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Wifi Off"
        android:textOn="Wifi On"
        android:id="@+id/switchon"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
